kubernetes/registry/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: registry
  labels:
    app: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: registry
          image: registry:2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "1000m"
            limits:
              memory: "1024Mi"
              cpu: "2000m"
          volumeMounts:
            - name: config
              mountPath: /etc/docker/registry
              readOnly: true
            - name: htpasswd
              mountPath: /auth
              readOnly: true
            # TODO: Give the registry actual usable persistent storage
            # - name: storage
            #   mountPath: /var/lib/registry
      volumes:
        - name: config
          configMap:
            name: registry-config
            items:
              - key: registry-config.yml
                path: config.yml
        - name: htpasswd
          secret:
            secretName: registry-htpasswd
            items:
              - key: HTPASSWD
                path: htpasswd
        # - name: storage
        #   emptyDir: {}
